--- a/public/src/pages/signup/signup.html
+++ b/public/src/pages/signup/signup.html
@@ -6,6 +6,9 @@
 -->
 <ion-header>
   <ion-navbar>
+      <button ion-button menuToggle>
+          <ion-icon name="menu"></ion-icon>
+      </button>
   <ion-title>signup</ion-title>
   </ion-navbar>
  </ion-header>
