--- a/public/src/pages/request-driver/request-driver.html
+++ b/public/src/pages/request-driver/request-driver.html
@@ -5,14 +5,41 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Request-driver</ion-title>
+    <ion-title>
+      Map
+    </ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
+    </ion-buttons>
   </ion-navbar>
+ </ion-header>
+ 
+ <ion-content>
 
-</ion-header>
+  <div id="header">
+    <h1>Demande de prise en charge</h1>
+    <hr>
+    <br /><br />
+    <h2>Vous êtes géolocalisés à la position :</h2>
+  </div>
 
+  <div #map id="map"></div> 
 
-<ion-content padding>
+  <hr>
 
-</ion-content>
+  <div>
+      <input id="date" type="date">
+
+      <br /><br />
+
+      <input type="time" name="wakeup">
+
+      <br /><br />
+
+      <input type="time" name="wakeup">
+
+    
+
+  </div>
+ </ion-content>
