--- a/public/src/index.html
+++ b/public/src/index.html
@@ -13,9 +13,10 @@
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="blsack">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
+  <script src="http://maps.google.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
