--- a/public/src/index.html
+++ b/public/src/index.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="blsack">
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
-  <script src="http://maps.google.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
+  <script src="http://maps.google.com/maps/api/js?key= AIzaSyB3E7dE7wbjFm7uNSsjzAmejxIZwMqi5c4"></script>
   <script src="cordova.js"></script>
 
   <!-- un-comment this code to enable service worker
